--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/deus-ex-m/frontend-project-44/issues"
   },
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme"
 }
