--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bin": {
     "brain-games": "bin/brain-games.js"
   },
-  "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme"
+  "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
