--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.3"
   }
 }
