--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/deus-ex-m/frontend-project-44/issues"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
   "dependencies": {
