--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/games/brain-even.js",
+    "brain-calc": "bin/games/brain-calc.js"
   },
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
   "dependencies": {
