--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/games/brain-even.js",
-    "brain-calc": "bin/games/brain-calc.js"
+    "brain-calc": "bin/games/brain-calc.js",
+    "brain-gcd": "bin/games/brain-gcd.js"
   },
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
   "dependencies": {
