--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "brain-even": "bin/games/brain-even.js",
     "brain-calc": "bin/games/brain-calc.js",
     "brain-gcd": "bin/games/brain-gcd.js",
-    "brain-progression": "bin/games/brain-progression.js"
+    "brain-progression": "bin/games/brain-progression.js",
+    "brain-prime": "bin/games/brain-prime.js"
   },
   "homepage": "https://github.com/deus-ex-m/frontend-project-44#readme",
   "dependencies": {
