--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   },
   "homepage": "https://github.com/dead-duke/hexlet-javascript-1-brain-games#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "@stylistic/eslint-plugin": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.3"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
+    "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.3.0"
   }
 }
